rust/cube/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__filter_params_multiplied_join_back__a_bare_cube_measure_source_answers_the_same_as_a_full_scan.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/filter_params_multiplied_join_back.rs
expression: result
---
fpmjb_order_tags__tag | fpmjb_orders__orders_per_buyer
----------------------+-------------------------------
a                     | 2                             
b                     | 1
