rust/cube/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__filter_params_multiplied_join_back__a_binding_over_a_joined_column_moves_the_measure.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/filter_params_multiplied_join_back.rs
expression: result
---
fpmjb_order_tags__tag | fpmjb_orders__vip_amount
----------------------+-------------------------
a                     | 0                       
b                     | 700
