rust/cube/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__filter_params_multiplied_join_back__a_measure_subquery_source_answers_the_same_as_a_full_scan.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/filter_params_multiplied_join_back.rs
expression: result
---
fpmjb_order_tags__tag | fpmjb_orders__vip_amount
----------------------+-------------------------
a                     | 300                     
b                     | 800
